--- a/app/src/main/res/layout/toast_listening_text.xml
+++ b/app/src/main/res/layout/toast_listening_text.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center">
+    android:gravity="start"
+    android:paddingStart="20dp"
+    android:paddingTop="5dp"
+    android:paddingEnd="20dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -28,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:minWidth="30dp"
             android:textColor="@color/fff"
             android:textSize="12sp"
             android:textStyle="bold" />
