--- a/app/src/main/res/layout/item_of_settings_checkbox.xml
+++ b/app/src/main/res/layout/item_of_settings_checkbox.xml
@@ -13,10 +13,12 @@
         android:background="?attr/selectableItemBackground"
         android:baselineAligned="false">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
+            android:id="@+id/tile_area"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:minHeight="48dp"
             android:orientation="vertical"
