--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,7 +60,7 @@
     </style>
 
     <style name="ScreenAssist" parent="ScreenPicker">
-        <item name="android:navigationBarColor">#3B000000</item>
+        <item name="android:navigationBarColor">#fff</item>
         <item name="android:windowEnterAnimation">@anim/fade_in_bottom</item>
         <item name="android:windowExitAnimation">@anim/fade_out_bottom</item>
     </style>
