--- a/app/src/main/res/layout/activity_text_ocr.xml
+++ b/app/src/main/res/layout/activity_text_ocr.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.vove7.jarvis.view.custom.ChildSelectableView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootContent"
     android:layout_width="match_parent"
@@ -39,4 +39,4 @@
         android:layout_marginBottom="10dp"
         android:src="@drawable/ic_edit"
         app:elevation="5dp" />
-</RelativeLayout>
+</cn.vove7.jarvis.view.custom.ChildSelectableView>
