--- a/app/src/main/res/layout/float_panel_google.xml
+++ b/app/src/main/res/layout/float_panel_google.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@drawable/fp_google_bg"
-    android:gravity="bottom|center"
+    android:layout_height="wrap_content"
+    android:background="@drawable/toolbar_round_bg"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
+
+    <View
+        android:layout_width="40dp"
+        android:layout_height="7dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/drop_bar" />
 
     <TextView
         android:id="@id/voice_text"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:minWidth="30dp"
