--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,9 @@
     <style name="TextOcr" parent="ScreenPicker" >
         <item name="android:statusBarColor">@color/half_trans</item>
         <item name="android:navigationBarColor">#22000000</item>
+        <item name="android:windowAnimationStyle">@style/fade</item>
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
     <style name="ScreenAssist" parent="ScreenPicker">
@@ -66,6 +69,12 @@
         <item name="android:windowExitAnimation">@anim/fade_out_bottom</item>
     </style>
 
+    <style name="fade" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:activityOpenExitAnimation">@android:anim/fade_out</item>
+        <item name="android:activityCloseExitAnimation">@android:anim/fade_out</item>
+        <item name="android:activityCloseEnterAnimation">@android:anim/fade_in</item>
+    </style>
 
     <!--防止白色启动背景-->
     <style name="TransparentBackground" parent="Theme.AppCompat.Light.NoActionBar">
