--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -2,21 +2,25 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="center">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/bottom_sheet"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         app:behavior_hideable="true"
+        app:cardBackgroundColor="@color/trans"
         app:cardElevation="0dp"
         app:layout_behavior="@string/bottom_sheet_behavior">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/toolbar_round_bg"
+            android:minWidth="450dp"
             android:orientation="vertical"
             android:paddingBottom="10dp">
 
