--- a/app/src/main/res/layout/float_panel_google.xml
+++ b/app/src/main/res/layout/float_panel_google.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     android:background="@drawable/toolbar_round_bg"
     android:gravity="center_horizontal"
+    android:minWidth="450dp"
     android:orientation="vertical">
 
     <View
