--- a/app/src/main/res/layout/dialog_sign_up.xml
+++ b/app/src/main/res/layout/dialog_sign_up.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="?attr/dialogPreferredPadding"
     android:paddingEnd="?attr/dialogPreferredPadding"
@@ -19,12 +19,13 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/user_email_view"
         android:layout_width="match_parent"
-        app:helperText="请注意邮箱务必正确，确保找回密码时正常接收邮件"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:helperText="请注意邮箱务必正确，确保找回密码时正常接收邮件">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM@._"
             android:hint="@string/text_email" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -67,8 +68,8 @@
             android:id="@+id/ver_code_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:helperText="@string/text_mail_help"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            app:helperText="@string/text_mail_help">
 
             <EditText
                 android:layout_width="match_parent"
